trunk/Plugins/TeamCity/fluentbuild-runner/fluentbuild-runner-test/testData/plugins/fluentbuildRunner/app_testunit/tests/statistics/compile_error/error1_test.rb
# @author: Roman Chernyatchik
require "test/unit"

class Failed1Test < Test::Unit::TestCase

  def test_compile_error
    $
  end
end